styles.css
/* ... */
/*/ CITATION /*/
.constat {
    width: 100%;
    overflow: hidden;
    margin-top: 10%;
    margin-bottom: 10%;
}

.constat span {
    display: block;
    margin: 5%;
    font-size: 2em;
    font-weight: 300
}

.constat img {
    width: 45%;
    vertical-align: middle;
    line-height: 100%
}

.constat_span {
    font-size: 1.2em;
    font-weight: bold;
    color: #1F3D58;
    padding-right: 30px;
}

.constat p {
    width: 60%;
    text-align: justify;
    margin: 0 auto 5% auto;
}

.constat div {
    width: 300px;
    display: inline-block;
    margin-bottom: 5%;
    margin-top: 5%
}

#constat {
    margin-top: -5%
}

#constat .div {
    margin-bottom: 10%;
}

#constat h2 {
    text-transform: none;
    color: #333;
    font-size: 1.7em;
}

#constat h3 {
    color: #B3B3B3;
    font-weight: 300;
    letter-spacing: 1.5px
}

#constat h1 > strong {
    text-transform: capitalize
}

#constat h2, #constat h3 {
    margin: 0;
    padding: 0;
    line-height: 160%
}

#constat p {
    width: 60%;
    margin: 1% auto 3.5% auto;
    text-align: justify
}

.constat_solution {
    width: 35% !important;
    float: left;
    margin: 10% 0 10% 10%;
}

.constat_solution p {
    width: 100% !important
}

#constat .constat img:nth-child(3) {
    width: 85%
}

.constat div > img:hover {
    opacity: 0.5;
    transition: all 0.3s ease-in-out;
    -webkit-transition: all 0.3s ease-in-out;
    -ms-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
    transform: scale(1.1);
}

.vertical_align {
    width: 100%;
    margin: 0 auto;
    font-size: 1em;
    padding: 2%;
    display: inline-block
}

iframe {
    display: block;
    margin: 0 auto;
    width: 960px;
    height: 560px
}

.vertical_align img {
    width: 40%;
}

#tablet {
    margin: 0% 0 1% 0;
    width: 90%
}

#offre_tablet p {
    font-family: "AngelFace";
    font-size: 2.5em;
    margin: 0
}

.level {
    background-image: url(img/map.png);
    background-attachment: fixed;
    margin-bottom: 70px;
    height: 80px
}

.level h2 {
    padding: 0 !important;
    line-height: 80px;
    font-weight: 500 !important
}

.offre_beclm {
    width: 300px;
    height: 250px;
    display: inline-block;
    margin: 1px;
    padding: 1%;
    background-color: #1F3D58;
    overflow: hidden;
    vertical-align: top;
}

.offre_beclm span {
    transform: translateY(100px);
    transition: all 0.2s linear;
    -webkit-transform: translateY(100px);
    -webkit-transition: all 0.2s linear;
    -moz-transform: translateY(100px);
    -moz-transition: all 0.2s linear;
    -o-transform: translateY(100px);
    -o-transition: all 0.2s linear;
    -ms-transform: translateY(100px);
    -ms-transition: all 0.2s linear;
    color: black;
    opacity: 0;
    display: block;
    letter-spacing: 3.5px;
    font-weight: normal;
    margin-top: 35px
}

.offre_beclm:hover span {
    opacity: 100;
    transform: translateY(0px);
    -webkit-transform: translateY(0px);
    -moz-transform: translateY(0px);
    -ms-transform: translateY(0px);
    -o-transform: translateY(0px);
}

.offre_beclm span img {
    width: 10%
}

.offre_beclm:hover p {
    display: none
}

.offre_beclm:hover .iconeCLM {
    width: 165px;
    transition: all 0.5s ease-in-out;
    -webkit-transition: all 0.5s ease-in-out;
    -ms-transition: all 0.5s ease-in-out;
    -moz-transition: all 0.5s ease-in-out;
    -o-transition: all 0.5s ease-in-out;
}

.offre_beclm img {
    width: 150px
}

.offre_beclm:hover {
    background-color: white;
    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.38);
    transition: all 0.4s ease-in-out;
    -webkit-transition: all 0.4s ease-in-out;
    -moz-transition: all 0.4s ease-in-out;
    -ms-transition: all 0.4s ease-in-out;
    -o-transition: all 0.4s ease-in-out;
}

.offre-beclm-ico {
    width: 150px;
    height: 150px;
    background-size: 100%;
    background-position: center center;
    margin: auto;
    -webkit-transition: all 0.4s ease-in-out;
    -moz-transition: all 0.4s ease-in-out;
    -ms-transition: all 0.4s ease-in-out;
    -o-transition: all 0.4s ease-in-out;
}

.offre_beclm:hover .offre-beclm-ico {
    width: 170px;
    height: 170px;
}

.offre_beclm.small {
    display : inline-block;
    vertical-align: top;
    padding: 4px;
    width: auto;
    height: auto;
    margin-left: 10px;
}

.offre_beclm.small + .offre_beclm.small {
    margin-left: 3px;
}

.offre_beclm.small .offre-beclm-ico {
    width: 75px;
    height: 75px;
}

.offre_beclm.blank,
.offre_beclm.blank:hover {
    background-color: transparent;
    cursor: default !important;
    box-shadow: none;
}

/* ALL OFFERS ICONES */

/* --> mobile */
.offre-beclm-ico.mobile {
    background-image: url(img/offers_mobile.svg);
}

.offre_beclm:hover .offre-beclm-ico.mobile {
    background-image: url(img/offers_mobile_hover.svg);
}

/* --> cloud */
.offre-beclm-ico.cloud {
    background-image: url(img/offers_cloud.svg);
}

.offre_beclm:hover .offre-beclm-ico.cloud {
    background-image: url(img/offers_cloud_hover.svg);
}

/* --> customer */
.offre-beclm-ico.customer {
    background-image: url(img/offers_customer.svg);
}

.offre_beclm:hover .offre-beclm-ico.customer {
    background-image: url(img/offers_customer_hover.svg);
}

/* --> stores */
.offre-beclm-ico.stores {
    background-image: url(img/offers_stores.svg);
}

.offre_beclm:hover .offre-beclm-ico.stores {
    background-image: url(img/offers_stores_hover.svg);
}

/* --> database */
.offre-beclm-ico.database{
    background-image: url(img/offers_database.svg);
}

.offre_beclm:hover .offre-beclm-ico.database {
    background-image: url(img/offers_database_hover.svg);
}

/* --> rules */
.offre-beclm-ico.rules {
    background-image: url(img/offers_rules.svg);
}

.offre_beclm:hover .offre-beclm-ico.rules {
    background-image: url(img/offers_rules_hover.svg);
}

/* --> distribution */
.offre-beclm-ico.distribution {
    background-image: url(img/offers_distribution.svg);
}
/* ... */

